[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "1.0.0"
description = "A console application to organize files by extension into categorized subfolders"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["file-organizer", "file-management", "cli", "python", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.scripts]
file-organizer = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/file-organizer"
Issues = "https://github.com/yourusername/file-organizer/issues"
Repository = "https://github.com/yourusername/file-organizer.git"
